// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots LoggedIn should show user is logged in 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#59626a",
        "fontFamily": "\\"Open Sans\\", sans-serif",
        "fontSize": "1rem",
        "fontWeight": 400,
      }
    }
  >
    Logged In...
  </span>
</span>
`;

exports[`Snapshots LoggedIn should show user is not logged in 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#59626a",
        "fontFamily": "\\"Open Sans\\", sans-serif",
        "fontSize": "1rem",
        "fontWeight": 400,
      }
    }
  >
    Logged Out...
  </span>
</span>
`;
